# swagger.yaml
@@ -17,8 +17,7 @@ paths:
       summary: Create a new family budget
       operationId: createFamilyBudget
       security:
-        - auth:
-          - user
+        - basicAuth: []
       requestBody:
         content:
           application/json:
@@ -43,10 +42,6 @@ paths:
           description: Unauthorized
         '403':
           description: Forbidden
-        '405':
-          description: Datbase error, failed to add family budget
-        '406':
-          description: Datbase error, failed to add family member
 
   /family_budget/{family_budget_id}:
     parameters:
@@ -62,15 +57,24 @@ paths:
       summary: Get an existing family bugdet
       operationId: getFamilyBudget
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FamilyBudget'
+                type: object
+                properties:
+                  members:
+                    type: array
+                    items:
+                      type: integer
+                      example: 1
+                  money_amount:
+                    type: number
+                  id:
+                    type: number
         '404':
           description: Budget not found
         '401':
@@ -83,8 +87,7 @@ paths:
       summary: Update an existing family budget, could be realised later
       operationId: updateFamilyBudget
       security:
-        - auth:
-          - user
+        - basicAuth: []
       requestBody:
         content:
           application/json:
@@ -92,7 +95,6 @@ paths:
               type: array
               items:
                 $ref: '#/components/schemas/FamilyBudget'
-                # FamilyBudget.id is not required, if it presents then 400 response
       responses:
         '200':
           description: OK
@@ -108,8 +110,7 @@ paths:
       summary: Delete an existing family budget
       operationId: deleteFamilyBudget
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
           description: OK
@@ -137,8 +138,7 @@ paths:
       summary: Get family budget report
       operationId: getFamilyBudgetReport
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
           description: OK
@@ -186,8 +186,7 @@ paths:
                     minimum: 1
                     example: 223
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
             description: OK
@@ -220,27 +219,27 @@ paths:
       summary: Get an existing personal bugdet
       operationId: getPersonalBudget
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PersonalBudget'
+                type: object
+                properties:
+                  id:
+                    type: number
+                  money_amount:
+                    type: number
         '404':
           description: Budget not found
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
-        '405':
-          description: Failed to execute operation, database error
-        '406':
-          description: Not enough money
-        '407':
-          description: Money amount couldn`t be less than 0.1
 
   /personal_budget/{budget_id}/report:
     parameters:
@@ -256,8 +255,7 @@ paths:
       summary: Get personal report
       operationId: getPersonalBudgetReport
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
           description: OK
@@ -301,8 +299,7 @@ paths:
                     minimum: 1
                     example: 223
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
             description: OK
@@ -312,14 +309,8 @@ paths:
           description: Unauthorized
         '403':
           description: Forbidden
-        '405':
-          description: Failed to execute operation, database error
-        '406':
-          description: Not enough money
-        '407':
-          description: Money amount couldn`t be less than 0.1
-        '408':
-          description: Receiving budget doesn`t exist
+        '400':
+          description: Bad request
 
   /user:
     post:
@@ -375,8 +366,7 @@ paths:
       summary: Get an user
       operationId: getUser
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
           description: OK
@@ -398,16 +388,25 @@ paths:
       summary: Update an existing user
       operationId: updateUser
       security:
-        - auth:
-          - user
+        - basicAuth: []
       requestBody:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/User'
-                # If user_id.id presents and it doesn't equal to user_id paramater then 400 response
+              type: object
+              properties:
+                surname:
+                  type: string
+                  example: "Master"
+                name:
+                  type: string
+                  example: "Dungeon"
+                username:
+                  type: string
+                  example: "Dungeon"
+                passwrd:
+                  type: string
+                  example: "Dungeon"
       responses:
         '200':
           description: OK
@@ -423,8 +422,7 @@ paths:
       summary: Delete an user and his personal budget
       operationId: deleteUser
       security:
-        - auth:
-          - user
+        - basicAuth: []
       responses:
         '200':
           description: OK
@@ -458,44 +456,10 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        '204':
           description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
-          content:
-            application/xml:
-              schema:
-                type: string
-            application/json:
-              schema:
-                type: string
         '400':
           description: Invalid username/password supplied
-
-  /user/logout:
-    get:
-      tags:
-        - user
-      summary: Logs out current logged in user session
-      description: ''
-      operationId: logoutUser
-      security:
-        - auth:
-          - user
-      responses:
-        '200':
-          description: successful operation
-        '401':
-          description: Unauthorized
 
 
 components:
@@ -601,10 +565,6 @@ components:
             $ref: "#/components/schemas/FamilyBudget"
 
   securitySchemes:
-    auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            user: manage budgets
+    basicAuth:
+      type: http
+      scheme: basic
